- Feature: Clang (http://clang.llvm.org/) v3.0 (currently in development) is now supported
- Feature: Connected "PLInput::Control" to the RTTI as well as the derived classes "PLInput::Axis", "PLInput::Button", "PLInput::Effect" and "PLInput::LED" (meaning they can now be used e.g. by scripts)
- Change: Please note that this release comes with several breaking changes with the goal to simplify the overall structure of PixelLight, have a look into the diaries (Git repository) for details
- Change: Updated libpng from "1.4.5" to "1.4.8"
- Change: Moved the PLProject executable from the runtime directory into the tools directory
- Change: Merged "Demos" into "Samples" in order to simplify the structure of PixelLight
- Change: Merged "PLGeneral" into "PLCore" in order to simplify the structure of PixelLight
- Change: "PLCore::Url": Renamed "GetTitle()" into "GetCompleteTitle()" and added some more filename title/extension related methods
- Change: Moved "SNMPhysicsCharacter" and "SNMPhysicsCharacterController", primary intended for rapid prototyping, from "PLPhysics" into "PLEngine"
- Change: Moved "SNMCameraZoomController", "SNMLookController", "SNMMoveController" and "SNMOrbitingController", primary intended for rapid prototyping, from "PLScene" to "PLEngine"
- Change: Merged documentation for "PLCore", "PLDatabase", "PLMath", "PLGraphics", "PLRenderer", "PLMesh", "PLScene", "PLPhysics", "PLSound", "PLInput", "PLGui", "PLEngine" into "PixelLightBase"
- Change: The sample applications are now using "PLInput" instead of "PLGui" to get and process input events
- Removed: Outdated "PLDefaultFileFormats" (use "PLAssimp" instead)


Changes in PixelLight 0.9.7-R1 (released on June 23, 2011)
- Feature: Added a generic, script language independent, script interface within the PLCore component with support for
           - Global variables
           - Global functions (C++ calls script and script calls C++)